2008-02-15  Lillian Angel  <langel@redhat.com>

	* INSTALL: Updated.
	* Makefile.am: Updated patches. Added download target, added extract
	and extract-ecj targets. Removed clone and clone-ecj targets. Updated
	all paths and targets appropriately.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* configure.ac: Added new tools: tar, md5sum.
	* gcjwebplugin.cc: Updated for 1.6.0.
	* generated/sun/awt/X11/generator/sizer.32: Regenerated.
	* generated/sun/awt/X11/generator/sizer.32.c: Regenerated.
	* patches/icedtea-ant.patch: Updated.
	* patches/icedtea-bytebuffer-compact.patch: Updated.
	* patches/icedtea-certbundle.patch: Updated.
	* patches/icedtea-copy-plugs.patch: Updated.
	* patches/icedtea-core-build.patch: Updated.
	* patches/icedtea-ecj.patch: Updated.
	* patches/icedtea-gcc-4.3.patch: Updated.
	* patches/icedtea-headers.patch: Updated.
	* patches/icedtea-lib64.patch: Updated.
	* patches/icedtea-libraries.patch: Updated.
	* patches/icedtea-linker-options.patch: Updated.
	* patches/icedtea-memory-limits.patch: Updated.
	* patches/icedtea-plugin.patch: Updated.
	* patches/icedtea-ports.patch: Updated.
	* patches/icedtea-signature-iterator.patch: Updated.
	* patches/icedtea-signed-types.patch: Updated.
	* patches/icedtea-ssl.patch: Updated.
	* patches/icedtea-test-atomic-operations.patch: Updated.
	* patches/icedtea-use-system-tzdata.patch: Updated.
	* patches/icedtea-version.patch: Updated.
	* patches/icedtea-zero.patch: Updated.
	* patches/icedtea-bytecodeInterpreter.patch: Removed.
	* patches/icedtea-bytecodeInterpreterWithChecks.patch: Removed.
	* rt/java/io/PushbackReader.java: Removed.

2008-02-15  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/stubRoutines_zero.hpp: Build on x86.
	* ports/hotspot/src/cpu/zero/vm/stubRoutines_zero.cpp: Likewise.

2008-02-15  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/build/linux/makefiles/arm.make: New file.
	* ports/hotspot/build/linux/makefiles/ia64.make: Likewise.