@@ -1,3 +1,8 @@
+2008-02-15  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.am (OPENJDK_URL): Add promoted version.
+	* Makefile.in: Regenerated.
+
 2008-02-15  Lillian Angel  <langel@redhat.com>
 
 	* INSTALL: Updated.
